--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -39,8 +39,12 @@ span.sidebar-hamburger-user-profile img {
 .sidebar-menus-item img {
     margin: 0 12px 0 0;
 }
+
+.drawer__title{
+    width:100%;
+}
  .drawer {
-      display: none;
+      /* display: none; */
     }
     .drawer__overlay {
       position: fixed;
@@ -105,8 +109,8 @@ span.sidebar-hamburger-user-profile img {
     background-color: #fff;
     display: flex;
     flex-direction: column;
-    -webkit-transform: translate3d(103%, 0, 0);
-    transform: translate3d(103%, 0, 0);
+    /* -webkit-transform: translate3d(103%, 0, 0);
+    transform: translate3d(103%, 0, 0); */
     -webkit-overflow-scrolling: touch;
     box-shadow: none;
     }
@@ -2550,7 +2554,7 @@ button.chat-header-back {
 .home-screen span.g-avatar.online_status_class {
     position: absolute;
     left: 0;
-    top: -100px;
+    top: -101px;
     width: 100px;
     height: 100px;
     border-radius: 1000px;
@@ -6999,9 +7003,9 @@ button.custom-btn {
     .pull-left.side-user-head h3.g-user-name {
     margin-top: 5px;
 }
-a.l-sidebar__avatar {
+/* a.l-sidebar__avatar {
     display: none;
-}
+} */
 .drawer__close {
     margin: 0;
     position: absolute;
