--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -804,9 +804,9 @@ i.fa.fa-google {
 .slider {
   height: 100%;
 }
-.slider div {
+/* .slider div {
   height: 100%;
-}
+} */
 
 .slider__item {
     font-size: 100px;
@@ -1813,7 +1813,7 @@ button.custom-btn {
     height: 128px;
     position: relative;
     /* padding: 14px; */
-    margin-bottom: 16px;
+    margin-bottom: 8px;
     max-width: 100%;
     width: 100%;
 }
@@ -1872,7 +1872,7 @@ section.main-search.bookmarkes-list.bookmarks-right-side {
     right: 0;
     bottom: 0;
     border-radius: 0 0 6px 6px;
-    padding: 11px 11px 11px 128px;
+    padding: 11px 11px 30px 128px;
     background-color: rgba(0,0,0,0.25);
 }
 a.left.btn.btn-success {
@@ -7421,4 +7421,14 @@ section#tabs {
 .modal-title.h4 {
     font-size: 1.6em;
     font-weight: 600;
+}
+
+.post-header .title-container .lazy-load-image-background img {
+    width: 3em;
+    height: 3em;
+    object-fit: unset;
+}
+
+.post-content .post-image .post-view-image {
+    width:100%;
 }
